tmp/funnel-output_path-ANaeagIC.tmp/gyak09/tests/unit/pods/errors/view/route-test.jshint.js
/home/ubuntu/workspace/gyak09/tmp/jshinter-output_path-D9yXhBNq.tmp/unit/pods/errors/view/route-test.jshint.js